# dessins

./: Cargo.toml  dessins.d  dessins.d.ts  dessins.js  dessins_bg.wasm.d.ts  flake.nix  index.html
1/: 1_polygones_reguliers.rs  2_etoiles_regulieres.rs  3_composition_1.rs  4_composition_2.rs  5_joligones.rs
2/: 1_10_cheval.rs  1_1_cheval.rs  1_2_cheval.rs  1_3_cheval.rs  1_4_cheval.rs  1_5_cheval.rs  1_6_cheval.rs  1_7_cheval.rs  1_8_cheval.rs  1_9_cheval.rs  2_1_1_lion.rs  2_1_2_lion.rs  2_2_1_oiseaux_poissons.rs  2_2_2_oiseaux_poissons.rs  2_3_1_smurf.rs  2_3_2_smurf.rs
3/: 1_1_dragons.rs  1_2_dragons.rs  1_3_dragons.rs  1_4_dragons.rs  1_5_dragons.rs  1_6_dragons.rs  1_7_dragons.rs  1_8_dragons.rs  1_dragons.rs  2_dragons.rs  3_dragons.rs  4_dragons.rs  5_dragons.rs  6_dragons.rs  7_dragons.rs
crates/dessins/: Cargo.toml
crates/dessins-lib/: Cargo.toml
crates/dessins-lib/src/: chapter_2.rs  chapter_3.rs  chapter_4.rs  chapter_6.rs  chapter_7.rs  lib.rs  main.rs  no_params.rs  ui.rs
crates/dessins-lib/src/chapter_1/: composition_1.rs  composition_2.rs  jolygon.rs  polygon.rs  star.rs
crates/dessins-lib/src/chapter_5/: orbital.rs  rotating.rs  spiral.rs
crates/dessins-lib/src/chapter_6/: bipartite.rs  linear_modulo.rs  linear_sticks.rs
crates/dessins/1/: 1_polygones_reguliers.rs  2_etoiles_regulieres.rs  3_composition_1.rs  4_composition_2.rs  5_joligones.rs
crates/dessins/2/: 1_10_cheval.rs  1_1_cheval.rs  1_2_cheval.rs  1_3_cheval.rs  1_4_cheval.rs  1_5_cheval.rs  1_6_cheval.rs  1_7_cheval.rs  1_8_cheval.rs  1_9_cheval.rs  2_1_1_lion.rs  2_1_2_lion.rs  2_2_1_oiseaux_poissons.rs  2_2_2_oiseaux_poissons.rs  2_3_1_smurf.rs  2_3_2_smurf.rs
crates/dessins/3/: 1_dragons.rs  2_dragons.rs  3_dragons.rs  4_dragons.rs  5_dragons.rs  6_dragons.rs  7_dragons.rs
crates/dessins/4/: etoiles_fractales.rs
crates/dessins/5/: 1_1_courbes_orbitales.rs  1_2_courbes_orbitales.rs  1_3_courbes_orbitales.rs  1_4_courbes_orbitales.rs  1_5_courbes_orbitales.rs  1_6_courbes_orbitales.rs  1_7_courbes_orbitales.rs  1_8_courbes_orbitales.rs  1_9_courbes_orbitales.rs  2_10_courbes_tournantes.rs  2_1_courbes_tournantes.rs  2_2_courbes_tournantes.rs  2_3_courbes_tournantes.rs  2_4_courbes_tournantes.rs  2_5_courbes_tournantes.rs  2_6_courbes_tournantes.rs  2_7_courbes_tournantes.rs  2_8_courbes_tournantes.rs  2_9_courbes_tournantes.rs  3_courbes_spirales.rs
crates/dessins/6/: 1_biparti_complet.rs  2_1_lineaires_modulo.rs  2_2_lineaires_modulo.rs  3_1_lineaires_batons.rs  3_2_lineaires_batons.rs  3_3_lineaires_batons.rs  3_4_lineaires_batons.rs
crates/dessins/7/: fractales_simples.rs
crates/dessins/src/: active_dessin.rs  adjustable_dessin.rs  animation.rs  chapter_1.rs  chapter_2.rs  chapter_3.rs  chapter_4.rs  chapter_5.rs  chapter_6.rs  chapter_7.rs  dessin_with_variables.rs  export.rs  lib.rs  main.rs  meta.rs  model.rs  osc.rs  params.rs  reflect.rs  resources.rs  shapes.rs  ui.rs
crates/dessins/src/adjustable_variable/: mod.rs
crates/dessins/src/adjustable_variable/types/: expression_f32.rs  f32.rs  mod.rs  pt2.rs  u32.rs  vec_f32.rs  vec_pt2.rs  vec_u32.rs
crates/dessins/src/animation/: basic_waveform.rs  mod.rs
crates/dessins/src/chapter_1/: composition_1.rs  composition_2.rs  jolygon.rs  polygon.rs  star.rs
crates/dessins/src/chapter_2/: raw_shape.rs  raw_shape_program.rs  shape_program.rs
crates/dessins/src/chapter_5/: orbital.rs  rotating.rs  spiral.rs
crates/dessins/src/chapter_6/: bipartite.rs  linear_modulo.rs  linear_sticks.rs
crates/dessins/src/chapter_7/: simple_deformed_fractal.rs  simple_fractal.rs  simple_rounded_fractal.rs
crates/dessins/src/dessin_variant/: composition_1.rs  composition_2.rs  dragon.rs  fractal_star.rs  jolygon.rs  mod.rs  polar_curve.rs  polygon.rs  star.rs
crates/dessins/src/dessin_variant/curve/: orbital.rs  rotating.rs  spiral.rs
crates/dessins/src/dessin_variant/linear/: bipartite.rs  mod.rs  modulo.rs  stick.rs
crates/dessins/src/dessin_variant/raw_shape/: mod.rs  raw_shape_program.rs  raw_shape_variant.rs
crates/dessins/src/dessin_variant/simple_fractal/: deformed.rs  mod.rs  regular.rs  rounded.rs
crates/dessins/src/meta/: expression_f32.rs  f32.rs  mod.rs
crates/dessins/src/reflect/: f32.rs  mod.rs
(+2027 files in other folders)
