[workspace]
members = ["crates/dessins", "crates/ui-controlled-params"]
resolver = "2"

[workspace.package]
authors = ["bikem <bengisuozaydin@gmail.com>"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bevy = "0.15"
bevy_egui = "0.32.0"
bevy_nannou = { git = "https://github.com/tychedelia/nannou.git", branch = "bevy_examples" }
nannou = { git = "https://github.com/tychedelia/nannou.git", branch = "bevy_examples", features = [ "egui" ] }
dessins = { path = "crates/dessins", version = "0.1.0" }
ui-controlled-params = { path = "crates/ui-controlled-params", version = "0.1.0" }
evalexpr = "12.0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [ "full" ] }
