[workspace]
members = ["crates/dessins", "crates/adjustable_dessin_derive"]
resolver = "2"

[workspace.package]
authors = ["bikem <bengisuozaydin@gmail.com>"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bevy = { version = "0.15", default-features = false, features = [ "webgl2" ] }
bevy_egui = "0.32.0"
bevy_nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "bevy-refactor" }
adjustable_dessin_derive = { path = "crates/adjustable_dessin_derive", version = "0.1.0" }
evalexpr = { version = "12.0.2", features = [ "serde" ] }
nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "bevy-refactor", features = [ "egui" ] }
nannou_osc = "0.19.0"
wavegen = "0.4.1"

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
