[package]
name = "dessins-lib"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "dessins"
path = "src/main.rs"

[dependencies]
evalexpr.workspace = true
nannou.workspace = true
nannou_egui.workspace = true
ui-controlled-params.workspace = true
