[package]
name = "dessins"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "dessins"
path = "src/main.rs"

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
bevy_nannou.workspace = true
evalexpr.workspace = true
nannou.workspace = true
ui-controlled-params.workspace = true
