[package]
name = "dessins"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "dessins"
path = "src/main.rs"

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
bevy_nannou.workspace = true
bevy_reflect.workspace = true
evalexpr.workspace = true
nannou.workspace = true
