[package]
name = "dessins"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "dessins"
path = "src/main.rs"

[dependencies]
adjustable_dessin_derive.workspace = true
anyhow.workspace = true # TODO: replace with thiserror
bevy.workspace = true
bevy_egui.workspace = true
bevy_nannou.workspace = true
evalexpr.workspace = true
nannou.workspace = true
nannou_osc.workspace = true
wavegen.workspace = true
